; ModuleID = '/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_gdImageScale.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/gd/libgd/extr_gd_interpolation.c_gdImageScale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32, i32, i32, i32* }

@GD_METHOD_COUNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_12__* @gdImageScale(%struct.TYPE_12__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %8, align 8
  %9 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %10 = icmp eq %struct.TYPE_12__* %9, null
  br i1 %10, label %22, label %11

11:                                               ; preds = %3
  %12 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %22, label %16

16:                                               ; preds = %11
  %17 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* @GD_METHOD_COUNT, align 4
  %21 = icmp sgt i32 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %16, %11, %3
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %68

23:                                               ; preds = %16
  %24 = load i32, i32* %6, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %29, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* %7, align 4
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %26, %23
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %68

30:                                               ; preds = %26
  %31 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  switch i32 %33, label %49 [
    i32 128, label %34
    i32 129, label %39
    i32 130, label %44
  ]

34:                                               ; preds = %30
  %35 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* %7, align 4
  %38 = call %struct.TYPE_12__* @gdImageScaleNearestNeighbour(%struct.TYPE_12__* %35, i32 %36, i32 %37)
  store %struct.TYPE_12__* %38, %struct.TYPE_12__** %8, align 8
  br label %66

39:                                               ; preds = %30
  %40 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %41 = load i32, i32* %6, align 4
  %42 = load i32, i32* %7, align 4
  %43 = call %struct.TYPE_12__* @gdImageScaleBilinear(%struct.TYPE_12__* %40, i32 %41, i32 %42)
  store %struct.TYPE_12__* %43, %struct.TYPE_12__** %8, align 8
  br label %66

44:                                               ; preds = %30
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %46 = load i32, i32* %6, align 4
  %47 = load i32, i32* %7, align 4
  %48 = call %struct.TYPE_12__* @gdImageScaleBicubicFixed(%struct.TYPE_12__* %45, i32 %46, i32 %47)
  store %struct.TYPE_12__* %48, %struct.TYPE_12__** %8, align 8
  br label %66

49:                                               ; preds = %30
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %51 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %50, i32 0, i32 3
  %52 = load i32*, i32** %51, align 8
  %53 = icmp eq i32* %52, null
  br i1 %53, label %54, label %55

54:                                               ; preds = %49
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %68

55:                                               ; preds = %49
  %56 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %57 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %58 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %57, i32 0, i32 2
  %59 = load i32, i32* %58, align 8
  %60 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %61 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 4
  %63 = load i32, i32* %6, align 4
  %64 = load i32, i32* %7, align 4
  %65 = call %struct.TYPE_12__* @gdImageScaleTwoPass(%struct.TYPE_12__* %56, i32 %59, i32 %62, i32 %63, i32 %64)
  store %struct.TYPE_12__* %65, %struct.TYPE_12__** %8, align 8
  br label %66

66:                                               ; preds = %55, %44, %39, %34
  %67 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  store %struct.TYPE_12__* %67, %struct.TYPE_12__** %4, align 8
  br label %68

68:                                               ; preds = %66, %54, %29, %22
  %69 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  ret %struct.TYPE_12__* %69
}

declare dso_local %struct.TYPE_12__* @gdImageScaleNearestNeighbour(%struct.TYPE_12__*, i32, i32) #1

declare dso_local %struct.TYPE_12__* @gdImageScaleBilinear(%struct.TYPE_12__*, i32, i32) #1

declare dso_local %struct.TYPE_12__* @gdImageScaleBicubicFixed(%struct.TYPE_12__*, i32, i32) #1

declare dso_local %struct.TYPE_12__* @gdImageScaleTwoPass(%struct.TYPE_12__*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
